Split into components

--- a/bs-config.json
+++ b/bs-config.json
@@ -6,6 +6,10 @@
         {
             "route": ["/node_modules"],
             "dir": "node_modules"
+        },
+        {
+            "route": ["/css"],
+            "dir": "css"
         }
     ]
 }
