--- a/package.json
+++ b/package.json
@@ -5,26 +5,36 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run serve",
-    "build": "gulp build:sass",
+    "build": "gulp sass",
+    "build:prod": "gulp sass:min",
+    "watch": "gulp watch:sass",
     "serve": "gulp serve",
     "styleguide": "nucleus --config config.nucleus.json",
-    "sites": "concurrently \"lite-server -c bs-config.json\" \"node-sass sites -o sites -w\" "
+    "sites": "concurrently \"lite-server -c bs-config.json\" \"npm run watch\" "
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^6.5.4",
     "browser-sync": "^2.18.5",
     "concurrently": "^3.1.0",
     "cross-spawn": "^5.0.1",
+    "cssnano": "^3.9.1",
     "gulp": "^3.9.1",
     "gulp-cached": "^1.1.1",
     "gulp-concat": "^2.6.1",
+    "gulp-postcss": "^6.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.0.0",
     "lite-server": "^2.2.2",
     "node-sass": "^4.0.0",
     "nucleus-styleguide": "^1.0.8",
+    "postcss-discard-comments": "^2.0.4",
     "reset-css": "^2.2.0",
     "run-sequence": "^1.2.2"
+  },
+  "dependencies": {
+    "normalize.css": "^5.0.0"
   }
 }
