--- a/bs-config.json
+++ b/bs-config.json
@@ -2,6 +2,7 @@
     "server": {
         "baseDir": "./sites"
     },
+    "port": 5555,
     "serveStatic": [
         {
             "route": ["/node_modules"],
